--- a/dict/data/language/tag_bank_term.json
+++ b/dict/data/language/tag_bank_term.json
@@ -1006,5 +1006,19 @@
 		0,
 		"card games",
 		0
+	],
+	[
+		"Cath✝️",
+		"",
+		0,
+		"Catholicism",
+		0
+	],
+	[
+		"Hind🛕",
+		"",
+		0,
+		"Hinduism",
+		0
 	]
 ]
