🐛 fix missing property in english IPA tag

--- a/dict/data/language/en/tag_bank_ipa.json
+++ b/dict/data/language/en/tag_bank_ipa.json
@@ -9,5 +9,5 @@
     ["🏴󠁧󠁢󠁳󠁣󠁴󠁿", "dialect", 0, "Scotland", 0],
     ["🏴󠁧󠁢󠁳󠁣󠁴󠁿", "dialect", 0, "Scottish", 0],
     ["🇮🇪", "dialect", 0, "Ireland", 0],
-    ["ccm", "dialect", 0, "cot-caught-merger"]
+    ["ccm", "dialect", 0, "cot-caught-merger", 0]
 ]  
