--- a/ext/js/language/languages.json
+++ b/ext/js/language/languages.json
@@ -1,14 +1,15 @@
 [
-    {"iso": "de", "language": "German", "flag": "🇩🇪"},
-    {"iso": "el", "language": "Greek", "flag": "🇬🇷"},
-    {"iso": "en", "language": "English", "flag": "🇺🇸🇬🇧"},
-    {"iso": "es", "language": "Spanish", "flag": "🇪🇸"},
-    {"iso": "fr", "language": "French", "flag": "🇫🇷"},
-    {"iso": "it", "language": "Italian", "flag": "🇮🇹"},
-    {"iso": "ja", "language": "Japanese", "flag": "🇯🇵"},
-    {"iso": "pt", "language": "Portuguese", "flag": "🇧🇷🇵🇹"},
-    {"iso": "ru", "language": "Russian", "flag": "🇷🇺"},
-    {"iso": "sq", "language": "Albanian", "flag": "🇦🇱"},
-    {"iso": "sh", "language": "Serbo-Croatian", "flag": "🇷🇸🇭🇷"},
-    {"iso": "id", "language": "Indonesian", "flag": "🇮🇩"}
+    {"iso": "sq", "language": "Albanian",       "flag": "🇦🇱",   "exampleText": "ndihmojme"},
+    {"iso": "en", "language": "English",        "flag": "🇺🇸🇬🇧", "exampleText": "don't read"},
+    {"iso": "fr", "language": "French",         "flag": "🇫🇷",   "exampleText": "lire"},
+    {"iso": "de", "language": "German",         "flag": "🇩🇪",   "exampleText": "gelesen"},
+    {"iso": "el", "language": "Greek",          "flag": "🇬🇷",   "exampleText": "διαβάζω"},
+    {"iso": "id", "language": "Indonesian",     "flag": "🇮🇩",   "exampleText": "membaca"},
+    {"iso": "it", "language": "Italian",        "flag": "🇮🇹",   "exampleText": "leggere"},
+    {"iso": "ja", "language": "Japanese",       "flag": "🇯🇵",   "exampleText": "読め"},
+    {"iso": "fa", "language": "Persian",        "flag": "🇮🇷",   "exampleText": "خواندن"},
+    {"iso": "pt", "language": "Portuguese",     "flag": "🇧🇷🇵🇹", "exampleText": "ler"},
+    {"iso": "ru", "language": "Russian",        "flag": "🇷🇺",   "exampleText": "читать"},
+    {"iso": "sh", "language": "Serbo-Croatian", "flag": "🇷🇸🇭🇷", "exampleText": "čitaše"},
+    {"iso": "es", "language": "Spanish",        "flag": "🇪🇸",   "exampleText": "acabar de"}
 ]
