--- a/dict/data/language/es/tag_bank_ipa.json
+++ b/dict/data/language/es/tag_bank_ipa.json
@@ -3,6 +3,5 @@
     ["🌎", "dialect", 0, "Latin-America", 0],
     ["🇲🇽", "dialect", 0, "Mexico", 0],
     ["🇦🇷", "dialect", 0, "Argentina", 0],
-    ["🇺🇾", "dialect", 0, "Uruguay", 0],
-    ["col", "register", 0, "colloquial", 0]
+    ["🇺🇾", "dialect", 0, "Uruguay", 0]
 ]  
