🏷️ few more tags

--- a/dict/data/language/de/tag_bank_term.json
+++ b/dict/data/language/de/tag_bank_term.json
@@ -14,6 +14,13 @@
      0
    ],
    [
+    "🇦🇹VI",
+    "",
+    0,
+    "Vienna",
+    0
+  ],
+   [
      "🇨🇭",
      "",
      0,
@@ -21,7 +28,7 @@
      0
    ],
    [
-     "BY",
+     "🇩🇪BY",
      "",
      0,
      "Bavaria",
