--- a/dict/data/language/tag_bank_term.json
+++ b/dict/data/language/tag_bank_term.json
@@ -1447,5 +1447,40 @@
 		0,
 		"calligraphy",
 		0
+	],
+	[
+		"🎾ten",
+		"",
+		0,
+		"tennis",
+		0
+	],
+	[
+		"techncl",
+		"",
+		0,
+		"technical",
+		0
+	],
+	[
+		"👷",
+		"",
+		0,
+		"construction",
+		0
+	],
+	[
+		"🪙",
+		"",
+		0,
+		"numismatics",
+		0
+	],
+	[
+		"🧵",
+		"",
+		0,
+		"textiles",
+		0
 	]
 ]
