--- a/ext/js/language/languages.json
+++ b/ext/js/language/languages.json
@@ -1,18 +1,18 @@
 [
-    {"iso": "sq",  "language": "Albanian",       "flag": "🇦🇱",   "exampleText": "ndihmojme"  },
-    {"iso": "ar",  "language": "Arabic",         "flag": "🇪🇬",   "exampleText":"قَرَأَ"         },
-    {"iso": "grc", "language": "Ancient Greek",  "flag": "🏺",   "exampleText": "γράφω"      },
-    {"iso": "en",  "language": "English",        "flag": "🇺🇸🇬🇧", "exampleText": "don't read" },
-    {"iso": "fr",  "language": "French",         "flag": "🇫🇷",   "exampleText": "lire"       },
-    {"iso": "de",  "language": "German",         "flag": "🇩🇪",   "exampleText": "gelesen"    },
-    {"iso": "el",  "language": "Greek",          "flag": "🇬🇷",   "exampleText": "διαβάζω"    },
-    {"iso": "id",  "language": "Indonesian",     "flag": "🇮🇩",   "exampleText": "membaca"    },
-    {"iso": "it",  "language": "Italian",        "flag": "🇮🇹",   "exampleText": "leggere"    },
-    {"iso": "ja",  "language": "Japanese",       "flag": "🇯🇵",   "exampleText": "読め"        },
-    {"iso": "la",  "language": "Latin",          "flag": "🏛",   "exampleText": "legere"     },
-    {"iso": "fa",  "language": "Persian",        "flag": "🇮🇷",   "exampleText": "خواندن"     },
-    {"iso": "pt",  "language": "Portuguese",     "flag": "🇧🇷🇵🇹", "exampleText": "ler"        },
-    {"iso": "ru",  "language": "Russian",        "flag": "🇷🇺",   "exampleText": "читать"     },
-    {"iso": "sh",  "language": "Serbo-Croatian", "flag": "🇷🇸🇭🇷", "exampleText": "čitaše"     },
-    {"iso": "es",  "language": "Spanish",        "flag": "🇪🇸",   "exampleText": "acabar de"  }
+    {"iso": "sq",  "i18n":false, "language": "Albanian",       "flag": "🇦🇱",   "exampleText": "ndihmojme"  },
+    {"iso": "ar",  "i18n":false, "language": "Arabic",         "flag": "🇪🇬",   "exampleText":"قَرَأَ"         },
+    {"iso": "grc", "i18n":false, "language": "Ancient Greek",  "flag": "🏺",   "exampleText": "γράφω"      },
+    {"iso": "en",  "i18n":true,  "language": "English",        "flag": "🇺🇸🇬🇧", "exampleText": "don't read" },
+    {"iso": "fr",  "i18n":false, "language": "French",         "flag": "🇫🇷",   "exampleText": "lire"       },
+    {"iso": "de",  "i18n":false, "language": "German",         "flag": "🇩🇪",   "exampleText": "gelesen"    },
+    {"iso": "el",  "i18n":false, "language": "Greek",          "flag": "🇬🇷",   "exampleText": "διαβάζω"    },
+    {"iso": "id",  "i18n":false, "language": "Indonesian",     "flag": "🇮🇩",   "exampleText": "membaca"    },
+    {"iso": "it",  "i18n":false, "language": "Italian",        "flag": "🇮🇹",   "exampleText": "leggere"    },
+    {"iso": "ja",  "i18n":false, "language": "Japanese",       "flag": "🇯🇵",   "exampleText": "読め"        },
+    {"iso": "la",  "i18n":false, "language": "Latin",          "flag": "🏛",   "exampleText": "legere"     },
+    {"iso": "fa",  "i18n":false, "language": "Persian",        "flag": "🇮🇷",   "exampleText": "خواندن"     },
+    {"iso": "pt",  "i18n":false, "language": "Portuguese",     "flag": "🇧🇷🇵🇹", "exampleText": "ler"        },
+    {"iso": "ru",  "i18n":false, "language": "Russian",        "flag": "🇷🇺",   "exampleText": "читать"     },
+    {"iso": "sh",  "i18n":true,  "language": "Serbo-Croatian", "flag": "🇷🇸🇭🇷", "exampleText": "čitaše"     },
+    {"iso": "es",  "i18n":false, "language": "Spanish",        "flag": "🇪🇸",   "exampleText": "acabar de"  }
 ]
