--- a/ext/js/language/languages/sh/i18n.json
+++ b/ext/js/language/languages/sh/i18n.json
@@ -296,7 +296,7 @@
         },
         "dictionaries": {
             "1": "Za korištenje Jezička potrebno je instalirati jedan ili više rječnika kako bi se mogli pretraživati pojmovi, kanji i druge informacije. Nekoliko rječnika može se preuzeti na ",
-            "discordServer": "Yezichak Discord serveru",
+            "discordServer": "Yomitan Discord serveru",
             "2": ". Rječnici se mogu konfigurisati pomoću dugmeta ispod ili kasnije s ",
             "3": " stranice."
         },
